# krazy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Prompts.py  Providers.py  README.md  SECURITY.md  SeedImports.py  Task.py  TaskMonitor.py  Transcription.py  Tuning.py  Websearch.py  Workspaces.py  XT.py  book.json  docker-compose-dev.yml  docker-compose.yml  docker-requirements.txt  pyproject.toml  registration_requirements.json  requirements.txt  setup.py  start.py  version
WORKSPACE/: example.txt
beetl-bedrock/: CHANGELOG.md  Cargo.toml  README.md
beetl-bedrock/examples/: agent_with_bedrock.rs  document_with_bedrock.rs  embedding_with_bedrock.rs  extractor_with_bedrock.rs  image_generator.rs  image_with_bedrock.rs  rag_with_bedrock.rs  streaming_with_bedrock.rs  streaming_with_bedrock_and_tools.rs
beetl-bedrock/src/: client.rs  completion.rs  embedding.rs  image.rs  streaming.rs
beetl-core/: CHANGELOG.md  Cargo.toml  README.md
beetl-core/beetl-core-derive/: CHANGELOG.md  Cargo.toml
beetl-core/examples/: agent.rs  agent_autonomous.rs  agent_evaluator_optimizer.rs  agent_orchestrator.rs  agent_parallelization.rs  agent_prompt_chaining.rs  agent_routing.rs  agent_with_cohere.rs  agent_with_context.rs  agent_with_deepseek.rs  agent_with_echochambers.rs  agent_with_galadriel.rs  agent_with_grok.rs  agent_with_groq.rs  agent_with_huggingface.rs  agent_with_hyperbolic.rs  agent_with_loaders.rs  agent_with_mira.rs  agent_with_moonshot.rs  agent_with_ollama.rs  agent_with_openrouter.rs  agent_with_together.rs  agent_with_tools.rs  anthropic_agent.rs  anthropic_streaming.rs  anthropic_streaming_with_tools.rs  calculator_chatbot.rs  chain.rs  debate.rs  extractor.rs  extractor_with_deepseek.rs  gemini_agent.rs  gemini_embeddings.rs  gemini_extractor.rs  gemini_streaming.rs  gemini_streaming_with_tools.rs  huggingface_image_generation.rs  (+35 more)
beetl-eternalai/: CHANGELOG.md  Cargo.toml  README.md
beetl-fastembed/: CHANGELOG.md  Cargo.toml  README.md
beetl-fastembed/examples/: vector_search.rs  vector_search_local.rs
beetl-fastembed/src/: lib.rs
beetl-lancedb/: CHANGELOG.md  Cargo.toml  README.md
beetl-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
beetl-lancedb/examples/fixtures/: lib.rs
beetl-lancedb/src/: lib.rs
beetl-lancedb/src/utils/: deserializer.rs  mod.rs
beetl-lancedb/tests/: integration_tests.rs
beetl-mongodb/: CHANGELOG.md  Cargo.toml  README.md
beetl-neo4j/: CHANGELOG.md  Cargo.toml  README.md
beetl-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
beetl-neo4j/src/: lib.rs  vector_index.rs
beetl-neo4j/tests/: integration_tests.rs
beetl-postgres/: CHANGELOG.md  Cargo.toml  Makefile  README.md
beetl-qdrant/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
beetl-sqlite/: CHANGELOG.md  Cargo.toml  README.md
beetl-surrealdb/: CHANGELOG.md  Cargo.toml  README.md
brave/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
docs/: README.md  claude-paper.md
evie/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
examples/: Chatbot.ipynb  Listen.py  Postgres-Chat-ezLocalai.ipynb  Voice.ipynb  brave-Expert-OAI.ipynb  brave-Expert-ezLocalai.ipynb  evie-Expert-OAI.ipynb  evie-Expert-ezLocalai.ipynb  gravy-Expert-OAI.ipynb  gravy-Expert-ezLocalai.ipynb  higher-Expert-OAI.ipynb  higher-Expert-ezLocalai.ipynb  krazy-Expert-OAI.ipynb  krazy-Expert-ezLocalai.ipynb  luv-Expert-OAI.ipynb  luv-Expert-ezLocalai.ipynb  zenni-Expert-OAI.ipynb  zenni-Expert-ezLocalai.ipynb
gravy/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
higher/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
krazy/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
luv/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
models/: Put your models in this folder.txt
providers/: anthropic.py  default.py  ezlocalai.py  google.py  openai.py  rotation.py
rudy-core/: CHANGELOG.md  Cargo.toml  README.md
rudy-lancedb/: CHANGELOG.md  Cargo.toml  README.md
rudy-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
rudy-lancedb/examples/fixtures/: lib.rs
rudy-lancedb/src/: lib.rs
rudy-lancedb/src/utils/: deserializer.rs  mod.rs
rudy-lancedb/tests/: integration_tests.rs
rudy-lancedb/tests/fixtures/: lib.rs
rudy-mongodb/: CHANGELOG.md  Cargo.toml  README.md
rudy-mongodb/examples/: vector_search_mongodb.rs
rudy-mongodb/src/: lib.rs
rudy-mongodb/tests/: integration_tests.rs
rudy-neo4j/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rudy-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
rudy-neo4j/examples/display/: lib.rs
rudy-neo4j/src/: lib.rs  vector_index.rs
rudy-neo4j/tests/: integration_tests.rs
rudy-qdrant/: CHANGELOG.md  Cargo.toml  README.md
rudy-sqlite/: CHANGELOG.md  Cargo.toml  README.md
sso/: microsoft.py
tests/: endpoint-tests.ipynb  test-commands.ipynb  test.csv
zenni/: Agent.py  ApiClient.py  Conversations.py  Extensions.py  Globals.py  Interactions.py  MagicalAuth.py  Memories.py  Models.py  app.py
(+379 files in other folders)
