[workspace]
resolver = "2"
members = [
    "beetl-core",
    "beetl-lancedb",
    "beetl-mongodb",
    "beetl-neo4j",
    "beetl-postgres",
    "beetl-qdrant",
    "beetl-core/beetl-core-derive",
    "beetl-sqlite",
    "beetl-surrealdb",
    "beetl-eternalai",
    "beetl-fastembed",
    "beetl-bedrock",
]
