[package]
name = "beetl-fastembed"
version = "0.1.6"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "beetl vector store index integration for Fastembed. https://github.com/Anush008/fastembed-rs"
repository = "https://github.com/thelegendkaan/beetl"

[dependencies]
beetl-core = { path = "../beetl-core", version = "0.12.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
schemars = "0.8.16"
fastembed = "4.4.0"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }

[[example]]
name = "vector_search"
required-features = ["beetl-core/derive"]

[[example]]
name = "vector_search_local"
required-features = ["beetl-core/derive"]
