[package]
name = "beetl-neo4j"
version = "0.2.10"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Neo4j implementation of a beetl vector store."
repository = "https://github.com/thelegendkaan/beetl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
neo4rs = "0.8.0"
beetl-core = { path = "../beetl-core", version = "0.12.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros"] }
textwrap = { version = "0.16.1"}
term_size = { version = "0.3.2"}
testcontainers = "0.23.1"
tracing-subscriber = "0.3.18"
httpmock = "0.7.0"

[[example]]
name = "vector_search_simple"
required-features = ["beetl-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["beetl-core/derive"]
